<resources>
    <string name="app_name">NetHunter</string>
    <string name="app_nav_home_label">NetHunter</string>
    <string name="hometitle">System Information</string>
    <string name="nethunter_description">You can ADD, DELETE, MOVE, SEARCH, BACKUP, RESTORE and RESET your custom command item. You can also long click on the item label to EDIT the item.</string>
    <string name="nethunter_current_interfaces">Network Interfaces</string>
    <string name="nethunter_external_ip">External IP</string>
    <string name="nethunter_hid_detect">HID Interfaces</string>
    <string name="nethunter_busybox_detect">Busybox Version</string>
    <string name="nethunter_kernelver_detect">Kernel Version</string>
    <string name="nethunter_terminal_detect">NetHunter Terminal Status</string>
    <string name="nethunter_howtouse_cmd">Put your own command string here, it will be run in Android environment to get the output displayed.</string>
    <string name="nethunter_howtouse_delimiter">Put your desired delimiter string if you want to split the output into lines, default is "\\n".</string>
    <string name="nethunter_howtouse_runoncreate">To get the output upon the fragment is created, check this option. Otherwise you have to click RUN button manually to get the output.</string>
    <string name="hid_powersploit_description">The Powersploit payload provides you a choice of reverse meterpreter HTTP/S payloads. "URL to payload" should be a URL accessible to the victim machine where the larger payload is downloaded to.</string>
    <string name="hid_windows_cmd_description">This Windows CMD payload allows you to enter raw commands to a Windows command prompt. Hitting the list menu will allow you to choose keyboard layout or UAC bypass options. </string>
    <string name="hid_powershell_http_description">The Powershell HTTP payload allows you to download and run a generic powershell payload from a URL. The URL to payload should be in a location accessible to the victim.</string>
    <string name="terminal_hint_enter_command">Enter command</string>
    <string name="terminal_send_cmd">Send</string>
    <string name="terminal_send_command_desc">Send command</string>
    <string name="kali_services_description">Kali Chroot services can be started and stopped via the switch toggle buttons, you can also ADD, DELETE, MOVE, SEARCH, BACKUP, RESTORE and RESET your own service item, and long click on the item label to EDIT the item as well.</string>
    <string name="kaliservices_howto_startservice">To START a service in kali, a command will be run INSIDE KaliChroot that looks like this:\n\nbusybox chroot &lt;chroot_folder> /usr/bin/sudo &lt;command_to_start_service>\n\nService is considered STARTED if the return value is 0 and vice versa.</string>
    <string name="kaliservices_howto_stopservice">To STOP a service in kali, a command will be run INSIDE KaliChroot that looks like this:\n\nbusybox chroot &lt;chroot_folder> /usr/bin/sudo &lt;command_to_stop_service>\n\nService is considered STOPPED if the return value is 0 and vice versa.</string>
    <string name="kaliservices_howto_checkservice">To Check if a service in kali is up or not, a command will be run OUTSIDE KaliChroot that looks like this:\n\nbusybox ps -o pid,comm | grep -w \'&lt;service_name>\'\n\nService is considered UP if the return value is 0 and vice versa.</string>
    <string name="kaliservices_howto_runServiceOnBoot">To automatically start the service after Kali Chroot is up, check this option.</string>
    <string name="modules_description">Manage kernel modules, if your kernel has any supported. Most devices use all drivers as inbuilt. For information (modinfo) click and hold selected module for menu.</string>
    <string name="custom_commands_description">You can ADD, DELETE, MOVE, SEARCH, BACKUP, RESTORE and RESET your custom command item. You can also long click on the item label to EDIT the item.</string>
    <string-array name="custom_commands_sendto_array">
        <item>android</item>
        <item>kali</item>
    </string-array>
    <string-array name="custom_commands_execmode_array">
        <item>interactive</item>
        <item>background</item>
    </string-array>
    <string name="drawertitleusbarsenal">USB Arsenal</string>
    <string name="usbarsenal_hint1_imagemounter">*Place all your .img or .iso files in "/sdcard/nh_files/diskimage/"</string>
    <string name="usbarsenal_current_usb_state">Current USB state: </string>
    <string name="usbarsenal_description">Select your desired USB Arsenal function here. If the functions are blank, try removing the init file using the top right menu. Some targets may need time to enable HID drivers on first try.</string>
    <string name="usbarsenal_header">USB Function Selector</string>
    <string name="usbarsenal_enabledfunctions">USB functions currently enabled:</string>
    <string name="usbarsenal_nofunctionsenabled">No USB function is currently enabled</string>
    <string name="usbarsenal_imagemounter_header">Image Mounter</string>
    <string name="usbarsenal_imagemounter_description">Image Mounter can be used only if the USB function \"mass_storage\" has been enabled</string>
    <string name="usbarsenal_networktethering_header">USB Network Tethering</string>
    <string name="usbarsenal_networktethering_description">USB NetWork Tethering can be used only if the USB function \"rndis\" or \"acmecm\" has been enabled</string>
    <string-array name="usbarsenal_target_platform">
        <item>Windows</item>
        <item>Linux</item>
        <item>Mac OS</item>
    </string-array>
    <string-array name="usbarsenal_usb_states_win_lin">
        <item>reset</item>
        <item>hid</item>
        <item>mass_storage</item>
        <item>rndis</item>
        <item>hid,mass_storage</item>
        <item>rndis,hid</item>
        <item>rndis,mass_storage</item>
        <item>rndis,hid,mass_storage</item>
    </string-array>
    <string-array name="usbarsenal_usb_states_mac">
        <item>reset</item>
        <item>hid</item>
        <item>mass_storage</item>
        <item>acm,ecm</item>
        <item>hid,mass_storage</item>
        <item>acm,ecm,hid</item>
        <item>acm,ecm,mass_storage</item>
        <item>acm,ecm,hid,mass_storage</item>
    </string-array>
    <string-array name="usbarsenal_usb_adb">
        <item>Enable</item>
        <item>Disable</item>
    </string-array>
    <string-array name="usbarsenal_usb_network_attack_mode">
        <item>Network Tethering Only</item>
    </string-array>
    <string name="badusb_label">BadUSB MITM Attack</string>
    <string name="badusb_description">This is our implementation of the BadUSB attack as demonstrated at Black Hat USA 2014. Enabling this USB gadget mode will allow your device to act as a USB network interface when plugged into a target computer. Connecting the USB cable to a PC will force all traffic from that PC (Windows or Linux) through the NetHunter device, where the traffic can be MITM\'ed.</string>
    <string name="wifipumpkin_description">Start an Evil-Twin Access Point and intercept HTTP traffic. Custom captive portals, featuring mobile network upstream (rmnet_data*), internal wlan0 upstream, internal wlan0/wlan1 AP mode, and external adapters.</string>
    <string name="mana_hostapd_wpe">The hostapd configuration file used for 802.1x/EAP authentication attack (hostapd-wpe)  This is not used with MANA.</string>
    <string name="mana_hostapd_wpe_certs">Generate certificates (1st time only)</string>
    <string name="mana_dhcpd">The dhcpd configuration file used by Mana.</string>
    <string name="mana_dnsspoof">The dnsspoof configuration file used by Mana.</string>
    <string name="mana_nat_full">The Mana script that does full NAT &amp; SSL interception.</string>
    <string name="mana_nat_simple">The Mana script that does full NAT only.</string>
    <string name="mana_nat_simple_bdf">The Mana script that does full NAT &amp; BDFProxy HTTP routing to port 8080.</string>
    <string name="bdfproxy_cfg">The configuration file for BDFProxy.</string>
    <string name="mana_bettercap_description">Route traffic to bettercap proxy with Mana-toolkit</string>
    <string name="hostapd_private_key">Private Key Password</string>
    <string name="select_language">Language</string>
    <string name="duckConvertAttack">Attack</string>
    <string name="duck_hunter_headline">The DuckHunter script can easily convert "USB Rubber Ducky" scripts into NetHunter HID format.  You can generate preconfigured scripts at the incredibly useful <a href="http://www.ducktoolkit.com/Home.jsp">Ducky Toolkit</a> site, or check out the Rubber Ducky script syntax from the official <a href="https://github.com/hak5darren/USB-Rubber-Ducky/wiki/Duckyscript">README</a></string>
    <string-array name="duckhunter_preset_array">
        <item>Select preset</item>
        <item>Hello World</item>
        <item>OSX Perl Reverse Shell</item>
        <item>OSX Ruby Reverse Shell</item>
        <item>Enable Windows RDP</item>
        <item>Fake Windows 10 Update</item>
    </string-array>
    <string name="payload_select">Please select</string>
    <string-array name="payloads">
        <item>windows/meterpreter/reverse_http</item>
        <item>windows/meterpreter/reverse_https</item>
    </string-array>
    <string name="source">Edit source</string>
    <string name="source_hint">…</string>
    <string name="start_badusb">Start BadUSB attack</string>
    <string name="stop_badusb">Stop BadUSB attack</string>
    <string name="launch_kali_menu">Launch Kali Menu in Terminal</string>
    <string name="launch_kali_shell">Launch Kali Shell in Terminal</string>
    <string name="launch_wifite">Launch Wifite</string>
    <string name="update_kali_chroot">Update Kali chroot</string>
    <string name="turn_off_external_wifi">Turn Off External Wifi</string>
    <string name="update">Update</string>
    <string name="load">Load</string>
    <string name="save">Save</string>
    <string name="execute_attack">Execute Attack</string>
    <string name="stop_mana">Stop mana</string>
    <string name="start_mana">Start mana</string>
    <string name="bssid">BSSID</string>
    <string name="ssid">SSID</string>
    <string name="chanel">Channel</string>
    <string name="enable_karma">Enable karma</string>
    <string name="admin">UAC Bypass</string>
    <string name="choose_language">Keyboard Layout</string>
    <string name="reset_usb">Reset USB</string>
    <string name="iface">Interface</string>
    <string name="payload">Payload</string>
    <string name="loading_service">Loading service state</string>
    <string name="get_external_ip">Get external IP</string>
    <string name="karma_loud">karma loud</string>
    <string name="ps_ip_address">IP Address (LHOST)</string>
    <string name="ps_port">Port (LPORT)</string>
    <string name="ps_payload_url">URL to payload</string>
    <string name="toast_error_permissions">NetHunter App does not have permission to send to NetHunter terminal!</string>
    <string name="modules_path">Modules path</string>
    <string name="modules_system_lib_path">/system/lib/modules</string>
    <string name="modules_lsmod">lsmod</string>
    <string name="modules_refresh">Refresh</string>
    <string name="modules_available_modules">Available modules</string>
    <string name="Output">Output</string>
    <string name="RHOST">RHOST</string>
    <string name="RHOSTValue">192.168.1.42</string>
    <string name="LPORT">LPORT</string>
    <string name="RPORT">RPORT</string>
    <string name="PORTValue">1234</string>
    <string name="Sequence">Sequence</string>
    <string name="SequenceValue">01a#11223344AABBCCDD</string>
    <string name="CanLogPath">/root/candump/dump.log</string>
    <string name="Input">Input</string>
    <string name="Browse">Browse</string>
    <string name="Interactive">Interactive</string>
    <string name="Verbose">Verbose</string>
    <string name="LocalLoopback">Local Loopback</string>
</resources>