<!-- res/layout/carsenal_tools_dialog.xml -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/tools_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:baselineAligned="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/RHOST"
                    app:strokeWidth="2dp"
                    app:boxStrokeWidthFocused="3dp"
                    app:boxStrokeColor="@color/ifc_box_stroke"
                    app:boxBackgroundColor="@color/transparent"
                    app:hintTextColor="@color/ifc_hint_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cannelloni_rhost"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="@string/RHOSTValue"
                        android:textColor="@color/white"
                        android:maxLength="15"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:hint="@string/RPORT"
                    app:strokeWidth="2dp"
                    app:boxStrokeWidthFocused="3dp"
                    app:boxStrokeColor="@color/ifc_box_stroke"
                    app:boxBackgroundColor="@color/transparent"
                    app:hintTextColor="@color/ifc_hint_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cannelloni_rport"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="@string/PORTValue"
                        android:textColor="@color/white"
                        android:maxLength="6"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:hint="@string/LPORT"
                    app:boxStrokeColor="@color/ifc_box_stroke"
                    app:strokeWidth="2dp"
                    app:boxStrokeWidthFocused="3dp"
                    app:boxBackgroundColor="@color/transparent"
                    app:hintTextColor="@color/ifc_hint_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cannelloni_lport"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="@string/PORTValue"
                        android:textColor="@color/white"
                        android:maxLength="6"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:baselineAligned="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:strokeWidth="2dp"
                    app:boxStrokeWidthFocused="3dp"
                    app:boxStrokeColor="@color/ifc_box_stroke"
                    app:boxBackgroundColor="@color/transparent"
                    app:hintTextColor="@color/ifc_hint_text"
                    android:hint="@string/Sequence">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cansend_sequence"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="@string/SequenceValue"
                        android:textColor="@color/white"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/Input"
                    app:strokeWidth="2dp"
                    app:boxStrokeWidthFocused="3dp"
                    app:boxStrokeColor="@color/ifc_box_stroke"
                    app:boxBackgroundColor="@color/transparent"
                    app:hintTextColor="@color/ifc_hint_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputfilepath"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="@string/CanLogPath"
                        android:textColor="@color/white" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/inputfilebrowse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Browse"
                    android:textColor="#FFFFFFFF"
                    android:layout_marginStart="8dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/Output"
                    app:strokeWidth="2dp"
                    app:boxStrokeWidthFocused="3dp"
                    app:boxStrokeColor="@color/ifc_box_stroke"
                    app:boxBackgroundColor="@color/transparent"
                    app:hintTextColor="@color/ifc_hint_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/outputfilepath"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="@string/CanLogPath"
                        android:textColor="@color/white" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/outputfilebrowse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Browse"
                    android:textColor="#FFFFFFFF"
                    android:layout_marginStart="8dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tools_advanced_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/button_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:gravity="center">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:cardCornerRadius="4dp"
                        android:padding="8dp">

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/btn_toggle_interactive"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Interactive"
                            android:textColor="@android:color/holo_red_light"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:paddingStart="12dp"
                            android:gravity="center_vertical" />

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:cardCornerRadius="4dp"
                        android:layout_marginStart="5dp"
                        android:padding="8dp">

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/btn_toggle_verbose"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Verbose"
                            android:textColor="@android:color/holo_red_light"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:paddingStart="12dp"
                            android:gravity="center_vertical" />

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/button_row2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:gravity="center">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:cardCornerRadius="4dp"
                        android:padding="8dp">

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/btn_toggle_loopback"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/LocalLoopback"
                            android:textColor="@android:color/holo_green_light"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:gravity="center_vertical"
                            android:paddingStart="12dp"
                            android:checked="true" /> <!-- Start checked, meaning loopback disabled -->

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
